cfg file format fixes

--- a/create_components.ipynb
+++ b/create_components.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -20,15 +20,12 @@
     "    \n",
     "class UnsortableOrderedDict(OrderedDict):\n",
     "    def items(self, *args, **kwargs):\n",
-    "        return UnsortableList(OrderedDict.items(self, *args, **kwargs))\n",
-    "    \n",
-    "# yaml.add_representer(UnsortableOrderedDict, yaml.representer.SafeRepresenter.represent_dict)\n",
-    "# json.JSONDecoder(object_pairs_hook = OrderedDict)"
+    "        return UnsortableList(OrderedDict.items(self, *args, **kwargs))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -92,36 +89,6 @@
     "\n",
     "        f.close()\n",
     "        json_out.close()\n",
-    "\n",
-    "\n",
-    "def create_cfg_file(comp_dir):\n",
-    "\n",
-    "    comp_name = string.split(comp_dir,'/')[-1]\n",
-    "    cfg_name = comp_name + '.cfg.in'\n",
-    "    cfg_file = comp_dir + '/files/' + cfg_name\n",
-    "\n",
-    "    # open parameters.json\n",
-    "    p = open(comp_dir + '/db/parameters.json')\n",
-    "    params = json.load(p)\n",
-    "    params = [item for it in params.values() for item in it]\n",
-    "\n",
-    "    # header\n",
-    "    head = [79*'=', 'Topoflow Config File for: ' + comp_name, 79*'=']\n",
-    "\n",
-    "    # table\n",
-    "    col1 = [str(obj['key']) for obj in params]\n",
-    "    col2 = [str('${' + obj['key'] + '}') for obj in params]\n",
-    "    col3 = [str(obj['value']['type']) for obj in params]\n",
-    "    col4 = [str(obj['description']) + ' [' + str(obj['value']['units']) + ']' for obj in params]\n",
-    "    col5 = [str(' {' + '; '.join(obj['value']['choices']) + '}') if obj['value'].has_key('choices') else '' for obj in params]\n",
-    "\n",
-    "    table = ['{0:20}| {1:20}| {2:10}| {3}{4}'.format(col1[i],col2[i],col3[i],col4[i],col5[i]) for i in range(len(col1))]\n",
-    "    tablestr = head + table\n",
-    "    tablestr = '\\n'.join(tablestr)\n",
-    "\n",
-    "    cfgfile_out = open(cfg_file, 'w')\n",
-    "    cfgfile_out.write(tablestr)\n",
-    "    cfgfile_out.close()\n",
     "\n",
     "\n",
     "def create_files_dot_json(comp_dir):\n",
@@ -161,7 +128,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_cfg_file(comp_dir):\n",
+    "\n",
+    "    comp_name = string.split(comp_dir,'/')[-1]\n",
+    "    cfg_name = comp_name + '.cfg.in'\n",
+    "    cfg_file = comp_dir + '/files/' + cfg_name\n",
+    "\n",
+    "    # open parameters.json\n",
+    "    p = open(comp_dir + '/db/parameters.json')\n",
+    "    allparams = json.load(p, object_pairs_hook = OrderedDict)\n",
+    "\n",
+    "    # header\n",
+    "    head = ['#' + 79*'=', '# Topoflow Config File for: ' + comp_name]\n",
+    "\n",
+    "    tablestr = head\n",
+    "\n",
+    "    for k in allparams.keys():\n",
+    "\n",
+    "        header = ['#' + 79*'=', '# ' + str(k)]\n",
+    "\n",
+    "        params = allparams[k]\n",
+    "\n",
+    "        # table\n",
+    "        col1 = [str(obj['key']) for obj in params]\n",
+    "        col2 = [str('${' + obj['key'] + '}') for obj in params]\n",
+    "        col3 = [str(obj['value']['type']) for obj in params]\n",
+    "        col4 = [str(obj['description']) + ' [' + str(obj['value']['units']) + ']' for obj in params]\n",
+    "        col5 = [str(' {' + '; '.join(obj['value']['choices']) + '}') if obj['value'].has_key('choices') else '' for obj in params]\n",
+    "\n",
+    "        table = ['{0:20}| {1:20}| {2:10}| {3}{4}'.format(col1[i],col2[i],col3[i],col4[i],col5[i]) for i in range(len(col1))]\n",
+    "        tablestr = tablestr + header + table\n",
+    "\n",
+    "\n",
+    "    tablestr = '\\n'.join(tablestr)\n",
+    "\n",
+    "    cfgfile_out = open(cfg_file, 'w')\n",
+    "    cfgfile_out.write(tablestr)\n",
+    "    cfgfile_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -244,32 +258,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating component for channels_diffusive_wave\n",
-      "Creating component for channels_dynamic_wave\n",
-      "Creating component for channels_kinematic_wave\n",
-      "Creating component for data_his\n",
-      "Creating component for diversions_fraction_method\n",
-      "Creating component for diversions_standard\n",
-      "Creating component for evap_energy_balance\n",
-      "Creating component for evap_priestley_taylor\n",
-      "Creating component for evap_read_file\n",
-      "Creating component for ice_gc2d\n",
-      "Creating component for infil_beven\n",
-      "Creating component for infil_green_ampt\n",
-      "Creating component for infil_richards_1d\n",
-      "Creating component for infil_smith_parlange\n",
-      "Creating component for meteorology\n",
-      "Creating component for satzone_darcy_layers\n",
-      "Creating component for snow_degree_day\n",
-      "Creating component for snow_energy_balance\n",
-      "Creating component for testservice\n",
-      "Creating component for topoflow\n"
+      "Creating component for channels_diffusive_wave\n"
      ]
     }
    ],
    "source": [
     "yaml_root = 'yaml/'\n",
-    "components_root = '../components/'\n",
+    "components_root = 'components/'\n",
     "\n",
     "yaml_dirs = glob.iglob(yaml_root + '*') # xml files\n",
     "\n",
@@ -286,10 +281,10 @@
     "        os.makedirs(comp_dir + '/db')\n",
     "        os.makedirs(comp_dir + '/files')\n",
     "    \n",
-    "    # copy yaml file to new component dir structure\n",
+    "#     # copy yaml file to new component dir structure\n",
     "    shutil.copyfile(comp + '/parameters.yaml', comp_dir + '/db/parameters.yaml')\n",
     "    \n",
-    "    # make a json parameter file\n",
+    "#     # make a json parameter file\n",
     "    yaml_to_json(comp_dir)\n",
     "    \n",
     "    # files.json\n",
