mod create_components

--- a/create_components.ipynb
+++ b/create_components.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -70,65 +70,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def yaml_to_json(comp_dir):\n",
+    "# def yaml_to_json(comp_dir):\n",
     "    \n",
-    "    inFile = comp_dir + '/db/parameters.yaml'\n",
-    "    outFile = comp_dir + '/db/parameters.json'\n",
+    "#     inFile = comp_dir + '/db/parameters.yaml'\n",
+    "#     outFile = comp_dir + '/db/parameters.json'\n",
     "\n",
-    "    with open(inFile) as f:\n",
-    "        yaml_in = yaml.load(f,OrderedDictYAMLLoader)\n",
-    "        json_out = open(outFile,'w')\n",
+    "#     with open(inFile) as f:\n",
+    "#         yaml_in = yaml.load(f,OrderedDictYAMLLoader)\n",
+    "#         json_out = open(outFile,'w')\n",
     "\n",
-    "        json.dump(yaml_in, json_out, indent = 4)\n",
+    "#         json.dump(yaml_in, json_out, indent = 4)\n",
     "\n",
-    "        f.close()\n",
-    "        json_out.close()\n",
+    "#         f.close()\n",
+    "#         json_out.close()\n",
     "\n",
     "\n",
     "def create_files_dot_json(comp_dir):\n",
     "    \n",
     "    comp_name = string.split(comp_dir,'/')[-1]\n",
-    "    cfg_name = comp_name + '.cfg.in'\n",
+    "    cfg_name = [comp_name.title() + '.cfg.in']\n",
     "\n",
     "    filesjson_out = open(comp_dir + '/db/files.json','w')\n",
     "    json.dump(cfg_name, filesjson_out)\n",
     "    filesjson_out.close()\n",
     "\n",
     "\n",
-    "def create_argv_dot_json(comp_dir):\n",
+    "# def create_argv_dot_json(comp_dir):\n",
     "    \n",
-    "    comp_name = string.split(comp_dir,'/')[-1]\n",
-    "    argv = '[\"' + comp_name + '\"]'\n",
-    "    o = open(comp_dir + '/db/argv.json', 'w')\n",
-    "    o.write(argv)\n",
-    "    o.close()\n",
+    "#     comp_name = string.split(comp_dir,'/')[-1]\n",
+    "#     argv = '[\"' + comp_name + '\"]'\n",
+    "#     o = open(comp_dir + '/db/argv.json', 'w')\n",
+    "#     o.write(argv)\n",
+    "#     o.close()\n",
     "\n",
     "\n",
-    "def create_provides_dot_json(comp_dir, prov):\n",
-    "    # where prov is a list of dictionaries of the connections it provides\n",
+    "# def create_provides_dot_json(comp_dir, prov):\n",
+    "#     # where prov is a list of dictionaries of the connections it provides\n",
     "    \n",
-    "    o = open(comp_dir + '/db/provides.json', 'w')\n",
-    "    json.dump(prov, o, indent = 2, sort_keys = True)\n",
-    "    o.close()\n",
+    "#     o = open(comp_dir + '/db/provides.json', 'w')\n",
+    "#     json.dump(prov, o, indent = 2, sort_keys = True)\n",
+    "#     o.close()\n",
     "    \n",
     "\n",
-    "def create_uses_dot_json(comp_dir, uses):\n",
-    "    # where uses is a list of dictionaries of the connections it needs\n",
+    "# def create_uses_dot_json(comp_dir, uses):\n",
+    "#     # where uses is a list of dictionaries of the connections it needs\n",
     "    \n",
-    "    o = open(comp_dir + '/db/uses.json', 'w')\n",
-    "    json.dump(uses, o, indent = 2, sort_keys = True)\n",
-    "    o.close()"
+    "#     o = open(comp_dir + '/db/uses.json', 'w')\n",
+    "#     json.dump(uses, o, indent = 2, sort_keys = True)\n",
+    "#     o.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -137,8 +137,10 @@
     "def create_cfg_file(comp_dir):\n",
     "\n",
     "    comp_name = string.split(comp_dir,'/')[-1]\n",
-    "    cfg_name = comp_name + '.cfg.in'\n",
+    "    cfg_name = comp_name.title() + '.cfg.in'\n",
     "    cfg_file = comp_dir + '/files/' + cfg_name\n",
+    "    \n",
+    "    print cfg_file\n",
     "\n",
     "    # open parameters.json\n",
     "    p = open(comp_dir + '/db/parameters.json')\n",
@@ -157,7 +159,7 @@
     "\n",
     "        # table\n",
     "        col1 = [str(obj['key']) for obj in params]\n",
-    "        col2 = [str('${' + obj['key'] + '}') for obj in params]\n",
+    "        col2 = [str('{' + obj['key'] + '}') for obj in params]\n",
     "        col3 = [str(obj['value']['type']) for obj in params]\n",
     "        col4 = [str(obj['description']) + ' [' + str(obj['value']['units']) + ']' for obj in params]\n",
     "        col5 = [str(' {' + '; '.join(obj['value']['choices']) + '}') if obj['value'].has_key('choices') else '' for obj in params]\n",
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -258,13 +260,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating component for channels_diffusive_wave\n"
+      "Creating component for channels_diffusive_wave\n",
+      "../../cloned_repos/component_metadata/channels_diffusive_wave/files/Channels_Diffusive_Wave.cfg.in\n",
+      "Creating component for channels_dynamic_wave\n",
+      "../../cloned_repos/component_metadata/channels_dynamic_wave/files/Channels_Dynamic_Wave.cfg.in\n",
+      "Creating component for channels_kinematic_wave\n",
+      "../../cloned_repos/component_metadata/channels_kinematic_wave/files/Channels_Kinematic_Wave.cfg.in\n",
+      "Creating component for data_his\n",
+      "../../cloned_repos/component_metadata/data_his/files/Data_His.cfg.in\n",
+      "Creating component for diversions_fraction_method\n",
+      "../../cloned_repos/component_metadata/diversions_fraction_method/files/Diversions_Fraction_Method.cfg.in\n",
+      "Creating component for diversions_standard\n",
+      "../../cloned_repos/component_metadata/diversions_standard/files/Diversions_Standard.cfg.in\n",
+      "Creating component for evap_energy_balance\n",
+      "../../cloned_repos/component_metadata/evap_energy_balance/files/Evap_Energy_Balance.cfg.in\n",
+      "Creating component for evap_priestley_taylor\n",
+      "../../cloned_repos/component_metadata/evap_priestley_taylor/files/Evap_Priestley_Taylor.cfg.in\n",
+      "Creating component for evap_read_file\n",
+      "../../cloned_repos/component_metadata/evap_read_file/files/Evap_Read_File.cfg.in\n",
+      "Creating component for ice_gc2d\n",
+      "../../cloned_repos/component_metadata/ice_gc2d/files/Ice_Gc2D.cfg.in\n",
+      "Creating component for infil_beven\n",
+      "../../cloned_repos/component_metadata/infil_beven/files/Infil_Beven.cfg.in\n",
+      "Creating component for infil_green_ampt\n",
+      "../../cloned_repos/component_metadata/infil_green_ampt/files/Infil_Green_Ampt.cfg.in\n",
+      "Creating component for infil_richards_1d\n",
+      "../../cloned_repos/component_metadata/infil_richards_1d/files/Infil_Richards_1D.cfg.in\n",
+      "Creating component for infil_smith_parlange\n",
+      "../../cloned_repos/component_metadata/infil_smith_parlange/files/Infil_Smith_Parlange.cfg.in\n",
+      "Creating component for meteorology\n",
+      "../../cloned_repos/component_metadata/meteorology/files/Meteorology.cfg.in\n",
+      "Creating component for satzone_darcy_layers\n",
+      "../../cloned_repos/component_metadata/satzone_darcy_layers/files/Satzone_Darcy_Layers.cfg.in\n",
+      "Creating component for snow_degree_day\n",
+      "../../cloned_repos/component_metadata/snow_degree_day/files/Snow_Degree_Day.cfg.in\n",
+      "Creating component for snow_energy_balance\n",
+      "../../cloned_repos/component_metadata/snow_energy_balance/files/Snow_Energy_Balance.cfg.in\n",
+      "Creating component for testservice\n",
+      "../../cloned_repos/component_metadata/testservice/files/Testservice.cfg.in\n",
+      "Creating component for topoflow\n",
+      "../../cloned_repos/component_metadata/topoflow/files/Topoflow.cfg.in\n"
      ]
     }
    ],
    "source": [
     "yaml_root = 'yaml/'\n",
-    "components_root = 'components/'\n",
+    "components_root = '../../cloned_repos/component_metadata/'\n",
     "\n",
     "yaml_dirs = glob.iglob(yaml_root + '*') # xml files\n",
     "\n",
@@ -276,33 +317,33 @@
     "    \n",
     "    # make new dirs\n",
     "    comp_dir = components_root + string.lower(comp_name)\n",
-    "    if not os.path.exists(comp_dir):\n",
-    "        os.makedirs(comp_dir)\n",
-    "        os.makedirs(comp_dir + '/db')\n",
-    "        os.makedirs(comp_dir + '/files')\n",
+    "#     if not os.path.exists(comp_dir):\n",
+    "#         os.makedirs(comp_dir)\n",
+    "#         os.makedirs(comp_dir + '/db')\n",
+    "#         os.makedirs(comp_dir + '/files')\n",
     "    \n",
     "#     # copy yaml file to new component dir structure\n",
-    "    shutil.copyfile(comp + '/parameters.yaml', comp_dir + '/db/parameters.yaml')\n",
+    "#     shutil.copyfile(comp + '/parameters.yaml', comp_dir + '/db/parameters.yaml')\n",
     "    \n",
     "#     # make a json parameter file\n",
-    "    yaml_to_json(comp_dir)\n",
+    "#     yaml_to_json(comp_dir)\n",
     "    \n",
     "    # files.json\n",
     "    create_files_dot_json(comp_dir)\n",
     "    \n",
-    "    # argv.json -> name of the component\n",
-    "    create_argv_dot_json(comp_dir)\n",
+    "#     # argv.json -> name of the component\n",
+    "#     create_argv_dot_json(comp_dir)\n",
     "    \n",
-    "    # info.json\n",
-    "    create_info_dot_json(comp_dir)\n",
+    "#     # info.json\n",
+    "#     create_info_dot_json(comp_dir)\n",
     "    \n",
-    "    # provides.json\n",
-    "    provides = [{'id':str(comp_name),'required':False}]\n",
-    "    create_provides_dot_json(comp_dir, provides)\n",
+    "#     # provides.json\n",
+    "#     provides = [{'id':str(comp_name),'required':False}]\n",
+    "#     create_provides_dot_json(comp_dir, provides)\n",
     "    \n",
-    "    # uses.json\n",
-    "    uses = [{'id':'----','required':False}]\n",
-    "    create_uses_dot_json(comp_dir, uses)\n",
+    "#     # uses.json\n",
+    "#     uses = [{'id':'----','required':False}]\n",
+    "#     create_uses_dot_json(comp_dir, uses)\n",
     "    \n",
     "    # cfg.in file\n",
     "    create_cfg_file(comp_dir)\n"
@@ -310,12 +351,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The_Brown_Fox'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'the_brown_fox'.title()"
+   ]
   },
   {
    "cell_type": "code",
@@ -343,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
