--- a/topoflow_creator/create_components.ipynb
+++ b/topoflow_creator/create_components.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -367,6 +367,55 @@
     "    \n",
     "    # cfg.in file\n",
     "#     create_cfg_file(comp_dir)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "comp_dir = '/Users/mari/Desktop/work/CSDMS/component_metadata/delta_rcm'\n",
+    "\n",
+    "# inFile = comp_dir + '/db/parameters.yaml'\n",
+    "# outFile = comp_dir + '/db/parameters.json'\n",
+    "\n",
+    "# with open(inFile) as f:\n",
+    "#     yaml_in = yaml.load(f,OrderedDictYAMLLoader)\n",
+    "#     json_out = open(outFile,'w')\n",
+    "\n",
+    "#     json.dump(yaml_in, json_out, indent = 4)\n",
+    "\n",
+    "#     f.close()\n",
+    "#     json_out.close()\n",
+    "\n",
+    "inFile = comp_dir + '/db/parameters.yaml'\n",
+    "outFile = comp_dir + '/db/parameters.json'\n",
+    "outFile_out = comp_dir + '/db/out_parameters.json'\n",
+    "\n",
+    "with open(inFile) as f:\n",
+    "    yaml_in = yaml.load(f,OrderedDictYAMLLoader)\n",
+    "    json_out = open(outFile,'w')\n",
+    "\n",
+    "    input_keys = [s for s in yaml_in.keys() if re.search('Input',s)]\n",
+    "    input_keys = [yaml_in[i] for i in input_keys]\n",
+    "    input_out = [i for inp in input_keys for i in inp]\n",
+    "\n",
+    "    json.dump(input_out, json_out, indent = 4)\n",
+    "    json_out.close()\n",
+    "\n",
+    "#     json_out_out = open(outFile_out,'w')\n",
+    "\n",
+    "#     out_keys = [s for s in yaml_in.keys() if re.search('Output',s)]\n",
+    "#     out_keys = [yaml_in[i] for i in out_keys]\n",
+    "#     out_out = [i for inp in out_keys for i in inp]\n",
+    "\n",
+    "#     json.dump(out_out, json_out_out, indent = 4)\n",
+    "#     json_out_out.close()\n",
+    "\n",
+    "    f.close()"
    ]
   },
   {
